kubernetes/k3s-prod/apps/cloudnativepg/cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cnpg-cluster-ingress
  labels:
    app.kubernetes.io/name: cnpg-cluster-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare-dns-issuer"
spec:
  tls:
    - hosts:
        - cnpg-cluster-prod.70ld.dev
      secretName: cnpg-cluster-tls
  rules:
    - host: cnpg-cluster-prod.70ld.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: cnpg-cluster-rw
                port:
                  number: 5432
